add fork parameter to generate ant task